--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,21 @@
 {
   "name": "@takker/zip",
   "version": "0.0.0",
-  "exports": "./fflate/mod.ts"
+  "exports": "./fflate/mod.ts",
+  "tasks": {
+    "fix": "deno fmt && deno lint --fix && deno check --remote **/*.ts && deno publish --dry-run --allow-dirty",
+    "check": "deno fmt --check && deno lint && deno check --remote **/*.ts && deno publish --dry-run --allow-dirty",
+    "test": "deno test --doc"
+  },
+  "imports": {
+    "@std/assert": "jsr:@std/assert@^1.0.2"
+  },
+  "exclude": [
+    "docs"
+  ],
+  "test": {
+    "exclude": [
+      "README.md"
+    ]
+  }
 }
