--- a/deno.jsonc
+++ b/deno.jsonc
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "exports": "./fflate/mod.ts",
   "tasks": {
-    "fix": "deno fmt && deno lint --fix && deno check --remote **/*.ts && deno publish --dry-run --allow-dirty",
-    "check": "deno fmt --check && deno lint && deno check --remote **/*.ts && deno publish --dry-run --allow-dirty",
+    "fix": "deno fmt && deno lint --fix && deno doc --lint ./fflate/mod.ts && deno check --remote **/*.ts && deno publish --dry-run --allow-dirty",
+    "check": "deno fmt --check && deno lint && deno doc --lint ./fflate/mod.ts && deno check --remote **/*.ts && deno publish --dry-run --allow-dirty",
     "test": "deno test --doc"
   },
   "imports": {
