refactor: use `@takker/bytes`

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -9,6 +9,7 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@^1.0.2",
+    "@takker/bytes": "jsr:@takker/bytes@^0.1.0",
     "@takker/crc": "jsr:@takker/crc@^0.1.0"
   },
   "exclude": [
